# pentagon-with-chatgpt

./: .gitignore  README.md  main.py  pyproject.toml
