[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pentagon-with-chatgpt"
version = "1.0.0"
description = "Python - Pentagon (Feat. ChatGPT)"
authors = ["Minjoon Kim <mg7441081@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
